--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8" />
     </head>
     <body>
-        <div id="app"></div>
+        <div id="content"></div>
+        <div id="result"></div>
         <script src="index.ts"></script>
     </body>
 </html>
