changed index route to new-document, added two routes: new index and document list, added two buttons for form - save and back

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,12 @@
     <head>
         <title>Form Creator</title>
         <meta charset="utf-8" />
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="content"></div>
-        <div id="result"></div>
-        <script src="index.ts"></script>
+        <div id="content">
+            <a href="document-list.html">Lista dokumentów</a>
+            <a href="new-document.html">Nowy dokument</a>
+        </div>
     </body>
 </html>
