--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <div id="content">
             <a href="document-list.html">Lista dokumentów</a>
             <a href="new-document.html">Nowy dokument</a>
+            <a href="new-form.html">Nowy formularz</a>
         </div>
     </body>
 </html>
