--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,18 @@
     </head>
     <body>
         <div id="content">
-            <a href="document-list.html">Lista dokumentów</a>
-            <a href="new-document.html">Nowy dokument</a>
-            <a href="new-form.html">Nowy formularz</a>
+            <div>
+                <a href="document-list.html">Lista dokumentów</a>
+            </div>
+            <div>
+                <a href="new-document.html">Nowy dokument</a>
+            </div>
+            <div>
+                <a href="new-form.html">Nowy formularz</a>
+            </div>
+            <div>
+                <a href="form-list.html">Lista formularzy</a>
+            </div>
         </div>
     </body>
 </html>
